fix align title about

--- a/app/css/media.css
+++ b/app/css/media.css
@@ -317,8 +317,6 @@
   .arrow-down-section-banner {
     right: -webkit-calc(55% - 1.1vw/2);
     right: calc(55% - 1.1vw/2); }
-  .job-section-about-producer {
-    margin-left: -4px; }
   .large-tittle-section-tools {
     margin: 1vw 0 0 -0.5vw; }
   .client-contact-list__social--icon {
@@ -1138,7 +1136,9 @@
 @media (max-width: 767px) {
   .photo-half-section-tools {
     height: 50vh;
-    min-height: 350px; } }
+    min-height: 350px; }
+  .job-section-about-producer {
+    margin-left: -4px; } }
 
 @media (max-width: 320px) {
   .job-section-about {
