--- a/app/css/tablet.css
+++ b/app/css/tablet.css
@@ -249,7 +249,7 @@
   .arrow-down-section-banner embed {
     width: 3%; }
   .highlight-hover h2 {
-    text-indent: -8px; }
+    text-indent: 10px; }
   .wrap {
     position: absolute;
     z-index: 15;
